>>1.9.8
 - VCFParser will now set column type when reading TSV files by using TabToColumnInfoMode to scan the actual values
   stored in the TSV file. The first time this is done for a each file, a .colinfo file will be created and then
   used if the file is read again by VCFParser in the future.
 - Added the mode tab-to-column-info to read the data from TSV files to determine the the column types
   (double/integer/string). Write a .colinfo file detailing the column names and types.
 - Add ability to run alignment-to-annotation-counts on a specific genomic region (see --start-position and
   --end-position).
 - FDR mode now accepts --column-selection-filter to select columns matching string.
 - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
   in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
   The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
   After possible realignment, and filtering to remove possible errors, EIR are reported with their frequencies.
 - Proof of principle that protocol buffer can seamlessly cohabit with data-specific compression schemes. The
   --codec option on fasta-to-compact is introduced to activate compression of reads when writing compact reads.
   The codec provided (called read-codec-1) achieves about 10% better compression of read files than pure
   protocol-buffer encoding. This read-codec-1 codec stores bases and quality scores with an arithmetic coder in
   the special compressed_data protocol buffer field.
 - Fixed a bug with ReadsQualityStatsMode when when SampleFraction == 1.0d, such as for files with a small
   number of reads.
 - Upgraded to SAM JDK 1.52
 - Modes sam-to-compact and sam-extract-reads now set SILENT validation before reading file header. This is required