@@ -50,9 +50,12 @@ public class BaseStatsMode extends AbstractGobyMode {
     private static final String MODE_DESCRIPTION = "Calculates frequencies for bases and motifs for a set of reads.";
 
 
-    private String inputFilename;
     private String outputFilename;
     private boolean doCpX;
+    /**
+     * Set of input filenames.
+     */
+    private String[] inputFilenames;
 
 
     /**
@@ -87,7 +90,7 @@ public class BaseStatsMode extends AbstractGobyMode {
             throws IOException, JSAPException {
         final JSAPResult jsapResult = parseJsapArguments(args);
 
-        inputFilename = jsapResult.getString("input");
+        inputFilenames = jsapResult.getStringArray("input");
         outputFilename = jsapResult.getString("output");
         doCpX = jsapResult.getBoolean("cpX");
         return this;
@@ -96,82 +99,84 @@ public class BaseStatsMode extends AbstractGobyMode {
     @Override
     public void execute() throws IOException {
 
-        String filename = inputFilename;
+
         final PrintStream writer = outputFilename == null || "-".equals(outputFilename) ?
-                 System.out: new PrintStream(new FileOutputStream(outputFilename)) ;
+                System.out : new PrintStream(new FileOutputStream(outputFilename));
         MutableString sequence = new MutableString();
-        ReadsReader reader = new ReadsReader(filename);
+        for (String filename: inputFilenames) {
+
+            ReadsReader reader = new ReadsReader(filename);
 // an array of longs that will hold the count in elements 'A' 'C' 'G' T'
-        long[] tallies = new long['T' + 1];
-        ProgressLogger progress = new ProgressLogger(LOG);
-        progress.start("Starting to analyze base stats.");
-        progress.itemsName = "reads";
-        // stores frequencies of the CpX motifs
-        long[] cpFreq = new long[4];
+            long[] tallies = new long['T' + 1];
+            ProgressLogger progress = new ProgressLogger(LOG);
+            progress.start("Starting to analyze base stats.");
+            progress.itemsName = "reads";
+            // stores frequencies of the CpX motifs
+            long[] cpFreq = new long[4];
 
-        final MotifMatcher[] matchers = {
-                new SubSequenceMotifMatcher("CG"),
-                new SubSequenceMotifMatcher("CA"),
-                new SubSequenceMotifMatcher("CT"),
-                new SubSequenceMotifMatcher("CC")
-        };
+            final MotifMatcher[] matchers = {
+                    new SubSequenceMotifMatcher("CG"),
+                    new SubSequenceMotifMatcher("CA"),
+                    new SubSequenceMotifMatcher("CT"),
+                    new SubSequenceMotifMatcher("CC")
+            };
 
-        for (Reads.ReadEntry entry : reader) {
-            for (final MotifMatcher matcher : matchers) {
-                matcher.newSequence();
-            }
-            ReadsReader.decodeSequence(entry, sequence);
-            for (int i = 0; i < sequence.length(); i++) {
-                char c = sequence.charAt(i);
-                tallies[c]++;
-                int index = 0;
-                if (doCpX) {
-                    for (final MotifMatcher matcher : matchers) {
-                        matcher.accept(c);
-                        if (matcher.matched()) {
-                            ++cpFreq[index];
+            for (Reads.ReadEntry entry : reader) {
+                for (final MotifMatcher matcher : matchers) {
+                    matcher.newSequence();
+                }
+                ReadsReader.decodeSequence(entry, sequence);
+                for (int i = 0; i < sequence.length(); i++) {
+                    char c = sequence.charAt(i);
+                    tallies[c]++;
+                    int index = 0;
+                    if (doCpX) {
+                        for (final MotifMatcher matcher : matchers) {
+                            matcher.accept(c);
+                            if (matcher.matched()) {
+                                ++cpFreq[index];
+                            }
+                            index++;
                         }
-                        index++;
                     }
                 }
+
+                progress.lightUpdate();
+
+            }
+            progress.done();
+
+            long sum = tallies['A'] + tallies['C'] + tallies['T'] + tallies['G'];
+            writer.printf(
+                    "BASES\t%s\tA:\t%d\t%g%%%n" +
+                    "BASES\t%s\tC:\t%d\t%g%% %n" +
+                    "BASES\t%s\tT:\t%d\t%g%% %n" +
+                    "BASES\t%s\tG:\t%d\t%g%% %n",
+                    filename,tallies['A'], percent(tallies['A'], sum),
+                    filename,tallies['C'], percent(tallies['C'], sum),
+                    filename,tallies['T'], percent(tallies['T'], sum),
+                    filename,tallies['G'], percent(tallies['G'], sum)
+            );
+            if (doCpX) {
+                long sumcpX = cpFreq[0] + cpFreq[1] + cpFreq[2] + cpFreq[3];
+                writer.printf(
+                        "CPX\t%s\tCpG:\t%d\t%g%%\t%n" +
+                        "CPX\t%s\tCpA:\t%d\t%g%%\t%n" +
+                        "CPX\t%s\tCpT:\t%d\t%g%%\t%n" +
+                        "CPX\t%s\tCpC:\t%d\t%g%%\t%n" +
+                        "CPX\t%s\tCpT+CpC:\t%d\t%g%%\t%n",
+                        filename,cpFreq[0], percent(cpFreq[0], sumcpX),
+                        filename,cpFreq[1], percent(cpFreq[1], sumcpX),
+                        filename,cpFreq[2], percent(cpFreq[2], sumcpX),
+                        filename,cpFreq[3], percent(cpFreq[3], sumcpX),
+                        filename,cpFreq[2] + cpFreq[3], percent(cpFreq[2] + cpFreq[3], sumcpX)
+                );
             }
 
-            progress.lightUpdate();
+            writer.flush();
+            progress.stop();
 
         }
-        progress.done();
-
-        long sum = tallies['A'] + tallies['C'] + tallies['T'] + tallies['G'];
-        writer.printf("tally of bases: %n" +
-                "A: %d %g%% %n" +
-                "C: %d %g%% %n" +
-                "T: %d %g%% %n" +
-                "G: %d %g%% %n",
-                tallies['A'], percent(tallies['A'], sum),
-                tallies['C'], percent(tallies['C'], sum),
-                tallies['T'], percent(tallies['T'], sum),
-                tallies['G'], percent(tallies['G'], sum)
-        );
-        if (doCpX) {
-            long sumcpX = cpFreq[0] + cpFreq[1] + cpFreq[2] + cpFreq[3];
-            writer.printf("tally of CpX motifs: %n" +
-
-                    "CpG: %d %g%% %n" +
-                    "CpA: %d %g%% %n" +
-                    "CpT: %d %g%% %n" +
-                    "CpC: %d %g%% %n" +
-                    "CpT+CpC: %d %g%% %n",
-                    cpFreq[0], percent(cpFreq[0], sumcpX),
-                    cpFreq[1], percent(cpFreq[1], sumcpX),
-                    cpFreq[2], percent(cpFreq[2], sumcpX),
-                    cpFreq[3], percent(cpFreq[3], sumcpX),
-                    cpFreq[2] + cpFreq[3], percent(cpFreq[2] + cpFreq[3], sumcpX)
-            );
-        }
-
-        writer.flush();
-        progress.stop();
-
     }
 
     private static double percent
